@@ -2,6 +2,9 @@ CMF 2.0.1-beta (unreleased)
 
   Bug Fixes
 
+    - CMFCore.ActionInformation: don't use a fixed set of properties for
+      ActionInformation. (http://www.zope.org/Collectors/CMF/232/)
+
     - CMFCore.CatalogTool: Use current executable's proxy roles, if any,
       in place of user's roles when computing 'allowedRolesAndUsers' for
       a query. (http://www.zope.org/Collectors/CMF/380)
